--- a/bake.html
+++ b/bake.html
@@ -284,6 +284,104 @@ body.no-scroll #munchlaxSticker{ opacity: 0; pointer-events: none; }
   box-shadow: 0 10px 18px rgba(0,0,0,.25); /* shadow follows the circle */
 }
 
+/* ===== Scrapbook hero layout ===== */
+.hero-collage{
+  --gap: 18px;
+  display: grid;
+  grid-template-columns: 1fr min(32vw, 280px);
+  align-items: center;
+  gap: var(--gap);
+  margin: 28px 0 10px;
+}
+@media (max-width: 820px){
+  .hero-collage{ grid-template-columns: 1fr; }
+}
+
+/* ===== Lined note with folded corner (not a pill/oval) ===== */
+.note{
+  position: relative;
+  padding: 26px 22px 22px 56px;      /* room for red margin line */
+  border-radius: 14px;
+  border: 1px solid rgba(17,19,24,.10);
+  background:
+    linear-gradient(#ffffffee,#ffffffee),
+    repeating-linear-gradient(to bottom, transparent 0 28px, rgba(30,97,195,.10) 29px 29.5px);
+  box-shadow: 0 12px 28px rgba(17,19,24,.10);
+  transform: rotate(-.3deg);
+  transition: transform .25s cubic-bezier(.2,.7,.2,1), box-shadow .25s;
+}
+.note:hover{ transform: rotate(0deg) translateY(-1px); box-shadow: 0 16px 36px rgba(17,19,24,.14); }
+
+/* red margin line like notebook paper */
+.note::before{
+  content:"";
+  position:absolute; inset: 0 auto 0 36px; width:2px;
+  background: rgba(220,38,38,.28);
+  border-radius:2px;
+}
+
+/* folded corner (dog-ear) */
+.note::after{
+  content:"";
+  position:absolute; top:-10px; right:16px; width:75px; height:26px;
+  transform: rotate(7deg);
+  background:
+    linear-gradient(45deg, rgba(0,0,0,.06) 25%, transparent 25% 50%, rgba(0,0,0,.06) 50% 75%, transparent 75%) 0/12px 12px,
+    rgba(255, 230, 180, .85);
+  border-radius: 6px;
+  box-shadow: 0 8px 16px rgba(17,19,24,.15);
+  mix-blend-mode: multiply;
+}
+
+/* Title with playful gradient + hand-drawn underline */
+.title-spark{
+  background: linear-gradient(90deg,#f59e0b,#fb7185,#60a5fa,#34d399);
+  -webkit-background-clip: text; background-clip: text; color: transparent;
+  position: relative;
+}
+.title-spark::after{
+  content:"";
+  position:absolute; left:0; right:0; bottom:-4px; height:10px;
+  background:
+    url("data:image/svg+xml;utf8,\
+      <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 20'>\
+        <path d='M2 12 Q20 2,40 12 T80 12 T120 12 T160 12 T198 12' \
+              fill='none' stroke='rgba(0,0,0,.35)' stroke-width='6' stroke-linecap='round'/>\
+      </svg>") center/100% 100% no-repeat;
+  pointer-events:none;
+}
+.note h1{ margin:0 0 6px; font-size: clamp(28px,3.8vw,40px); line-height:1.15; }
+.note p{ margin:0; max-width:70ch; line-height:1.55; font-size: clamp(15px,1.9vw,16px); color:#222; }
+
+/* ===== Polaroid photo ===== */
+.polaroid{
+  justify-self: end;
+  width: min(32vw, 280px);
+  background:#fff;
+  border-radius: 10px;
+  padding: 10px 10px 46px;
+  box-shadow: 0 15px 30px rgba(17,19,24,.22);
+  transform: rotate(3deg);
+  position: relative;
+}
+.polaroid img{ width:100%; height:auto; display:block; border-radius:6px; }
+.polaroid figcaption{
+  position:absolute; left:12px; right:12px; bottom:10px;
+  font-size:12.5px; letter-spacing:.2px; color:#111;
+  opacity:.8; text-align:center;
+}
+.polaroid::before{
+  /* small tape strip on the photo */
+  content:""; position:absolute; top:-10px; left:14px; width:64px; height:22px;
+  background:
+    linear-gradient(45deg, rgba(0,0,0,.06) 25%, transparent 25% 50%, rgba(0,0,0,.06) 50% 75%, transparent 75%) 0/12px 12px,
+    rgba(255, 230, 180, .9);
+  border-radius:6px; transform: rotate(-10deg);
+  box-shadow: 0 8px 16px rgba(17,19,24,.18);
+}
+@media (max-width:820px){
+  .polaroid{ justify-self: start; transform: rotate(-2deg); width: min(78vw, 320px); }
+}
 
 
 
@@ -308,17 +406,23 @@ body.no-scroll #munchlaxSticker{ opacity: 0; pointer-events: none; }
   </nav>
 
   <main class="container work">
-   <!-- Hero / recipe-card header -->
-<section class="hero hero-recipecard" aria-label="About this page">
-  <div class="recipe-card">
-    <h1>Baking for my people</h1>
+    <!-- Scrapbook hero (note + polaroid) -->
+<section class="hero-collage" aria-label="About this page">
+  <div class="note">
+    <h1><span class="title-spark">Baking for my people</span></h1>
     <p>
       I like trying new recipes and turning raw ingredients into something that makes friends smile.
       I bring cakes for birthdays and job offers, cookies for study breaks, and focaccia for random Tuesdays.
       Open any card to see another photo and the full recipe.
     </p>
   </div>
+
+  <figure class="polaroid">
+    <img src="images/Eug+Jan.JPG" alt="Cutting a cake with a friend">
+    <figcaption>cake-cutting crew</figcaption>
+  </figure>
 </section>
+
 
 
     <!-- Cards -->
